# coding_solutions_hub

./: .clang-format  .gitignore  .nvim.lua  .pylintrc  README.md  create_link.py  create_solution.py  vim.toml
1_semester/3_contest/: copy.py
2_semester/1_contest/J-geometry/tests/: CMakeLists.txt
2_semester/3_contest/V/test/backend/: CMakeLists.txt
api/: add_test.py  build.py  clean_up.py  constants.py  creat_hero.py  creat_link.py  creat_problem.py  create_hero.py  create_link.py  link.py  my_os.py  my_select.py  project_navigator.py  require_clean_work_tree.sh  run.py  run_only.py  test.py  util.py  zip_solution.py
api/cpp/: CMakeLists.txt  __init__.py  configure_build.py  configure_debug.py  main.py  run.py
api/cpp/test/solution/: main.cpp
api/other/: CMakeLists.txt  add_test.py  test.py
api/other/cpp/: debug.py  run.py
api/test/: __init__.py  add_test.py  test.py
ignore/: constants.py  create_link.py  create_problem.py  create_solution.py  export.py  export_functions.py  iterate_project.py  my_select.py  os_functions.py  update.py
ignore/checkers/: sets.py
ignore/problemdir_scratch/: export.py
nvim/: overseer.lua
other/: PiFunc.cpp  SegmentTree.cpp  SuffixAutomaton-array.cpp  SuffixAutomaton-links.cpp  Trie-array.cpp  ZFunc.cpp  bor.cpp  diijkstra.cpp  io.cpp  manacher.cpp  p2s.cpp  p2z.cpp  z2p.cpp
other/hash/: pair.h
other/input-output/: input.cpp  output.cpp
problems/0-GameOfLife/: README.md
problems/1-HanoiTowers/: README.md
problems/10/: README.md
problems/100/: README.md  description.html
problems/101/: README.md
problems/102/: README.md
problems/103/: README.md
problems/104/: README.md
problems/105/: README.md  desc_ru.html
problems/106/: README.md  desc_ru.html
problems/107/: README.md
problems/108/: README.md
problems/109/: README.md
problems/11/: README.md
problems/110/: README.md
problems/111/: README.md
problems/112/: README.md
problems/113-notebook/: README.md  description.html
problems/114-binsearch/: README.md  desc_ru.html
problems/115-sort/: README.md  description.html
problems/116-cstring/: README.md  desc_ru.html
problems/117-мирные_ферзи/: README.md  desc_ru.html
problems/118-лень-двигатель_прогресса/: README.md  desc_ru.html
problems/119-слияние_template/: README.md  description.html
problems/12/: README.md
problems/120-k-я_порядковая_статистика_template/: README.md  desc_ru.html
problems/121-priority_queue_template/: README.md  desc_ru.html
problems/122-простая_задачка/: README.md  description.html
problems/123-пиксель-арт/: README.md  description.html
problems/124-matrices/: README.md  desc_ru.html
problems/125-array/: README.md  description.html
problems/126-string_view/: README.md  desc_ru.html
problems/174/Andrew/: CMakeLists.txt
problems/174/Andrew/other/: constants.py
problems/174/Andrew/solution1/: main.cpp
(+1211 files in other folders)
